# KVPstorage

./: .gitignore  .gitmodules  CMakeLists.txt  KVPstorage.h  Makefile  README.md
include/: KVPstorage.h
src/: CMakeLists.txt  add_kvp_to_list.c  cmd_getall.c  cmd_set.c  exec_command.c  get_kvp_from_line.c  input_loop.c  lst_add_setting.c  lst_new_setting.c  main.c  update_file.c
srcs/: add_kvp_to_list.c  cmd_delete.c  cmd_get.c  cmd_getall.c  cmd_set.c  exec_command.c  get_kvp_from_line.c  get_kvp_from_list.c  init_settings_list.c  input_loop.c  lst_add_setting.c  lst_new_setting.c  main.c  open_settings_file.c  read_loop.c  testmain.c  update_file.c
tests/: CMakeLists.txt  KVPtest.cpp
